include(FetchContent)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

add_subdirectory(DataContainerGenerator)
add_subdirectory(catch2)
add_subdirectory(unordered_dense)
add_subdirectory(glew)
add_subdirectory(stb)
add_subdirectory(freetype)
add_subdirectory(glm)

if (NOT WIN32)
	add_subdirectory(glfw)
	add_subdirectory(miniaudio)
endif()
